Bourbonize things and add responsive layouts

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
 
     <title>Grid Exercise</title>
 
-    <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="xyz.css">
 </head>
 <body>
     <div class="row">
         <figure class="frame">
-            <img src="https://octodex.github.com/images/filmtocat.png" alt="Filmtocat">
+            <div class="picture">
+                <img src="https://octodex.github.com/images/filmtocat.png" alt="Filmtocat">
+            </div>
             <figcaption>
                 #115
                 <div class="author">
@@ -22,7 +23,9 @@
             </figcaption>
         </figure>
         <figure class="frame">
-            <img src="https://octodex.github.com/images/filmtocat.png" alt="Filmtocat">
+            <div class="picture">
+                <img src="https://octodex.github.com/images/filmtocat.png" alt="Filmtocat">
+            </div>
             <figcaption>
                 #115
                 <div class="author">
@@ -32,7 +35,9 @@
             </figcaption>
         </figure>
         <figure class="frame">
-            <img src="https://octodex.github.com/images/filmtocat.png" alt="Filmtocat">
+            <div class="picture">
+                <img src="https://octodex.github.com/images/filmtocat.png" alt="Filmtocat">
+            </div>
             <figcaption>
                 #115
                 <div class="author">
